style: position move indicator dots and rings absolutely to prevent piece shifting

--- a/public/style.css
+++ b/public/style.css
@@ -628,6 +628,7 @@ body {
 
 /* Move dots and rings */
 .possible-move-dot {
+    position: absolute;
     width: 25%;
     height: 25%;
     background-color: var(--color-highlight);
@@ -637,6 +638,7 @@ body {
 }
 
 .possible-move-ring {
+    position: absolute;
     width: 78%;
     height: 78%;
     border: 4px solid var(--color-highlight);
